[package]
name = "shithead_game_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.16.1"
tokio = { version = "1.15.0", features = ["full"] }
thiserror = "1.0.30"
anyhow = "1.0.52"
log = "0.4.14"
simple_logger = "1.16.0"
futures = "0.3.19"
