[package]
name = "shithead_game_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.16.1"
tokio = { version = "1.15.0", features = ["full"] }
anyhow = "1.0.52"
log = "0.4.14"
simple_logger = "1.16.0"
futures = "0.3.19"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
thiserror = "1.0.30"
dashmap = { version = "5.0.0", features = ["serde"] }
lazy_static = "1.4.0"
strum = "0.23.0"
strum_macros = "0.23.1"
ts-rs = "6.1.0"
